k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: enterprise-backend
  namespace: enterprise

spec:
  selector:
    app: enterprise-backend

  ports:
  - port: 80
    targetPort: 8000

  type: ClusterIP
